--- a/Windows-10-сборки.css
+++ b/Windows-10-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 5966px;
+  min-height: 8275px;
 }
 
 .u-section-1 .u-text-1 {
@@ -62,19 +62,19 @@
 .u-section-1 .u-image-6 {
   width: 900px;
   height: 505px;
-  margin: 28px auto 0;
+  margin: 12px auto 0;
 }
 
 .u-section-1 .u-image-7 {
   width: 900px;
   height: 505px;
-  margin: 28px auto 0;
+  margin: 12px auto 0;
 }
 
 .u-section-1 .u-image-8 {
   width: 900px;
   height: 505px;
-  margin: 28px auto 0;
+  margin: 12px auto 0;
 }
 
 .u-section-1 .u-text-5 {
@@ -87,176 +87,197 @@
 }
 
 .u-section-1 .u-text-6 {
-  margin: 87px auto 0;
+  margin: 120px auto 0;
+}
+
+.u-section-1 .u-image-9 {
+  width: 900px;
+  height: 506px;
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-image-10 {
+  width: 900px;
+  height: 505px;
+  margin: 12px auto 0;
+}
+
+.u-section-1 .u-image-11 {
+  height: 506px;
+  width: 900px;
+  margin: 12px auto 0;
+}
+
+.u-section-1 .u-text-7 {
+  margin: 28px 0 0;
 }
 
 .u-section-1 .u-btn-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 45px auto 0;
+}
+
+.u-section-1 .u-text-8 {
+  margin: 99px auto 0;
+}
+
+.u-section-1 .u-btn-4 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 3px auto 0;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 0;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 29px;
+  margin: 6px auto 45px;
   padding: 10px 37px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 6093px;
+    min-height: 8434px;
   }
 
   .u-section-1 .u-text-1 {
     width: auto;
     margin-top: 28px;
-    margin-right: 248px;
   }
 
   .u-section-1 .u-text-2 {
     width: auto;
-    margin-right: 282px;
   }
 
   .u-section-1 .u-image-1 {
     margin-top: 28px;
-    margin-right: 18px;
   }
 
   .u-section-1 .u-image-2 {
     margin-top: 20px;
-    margin-right: 18px;
   }
 
   .u-section-1 .u-image-3 {
     margin-top: 20px;
-    margin-right: 18px;
   }
 
   .u-section-1 .u-image-4 {
     margin-top: 20px;
-    margin-right: 18px;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-right: -3px;
-    margin-left: 1px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-right: 214px;
   }
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-right: 283px;
-  }
-
-  .u-section-1 .u-image-5 {
-    margin-right: 18px;
   }
 
   .u-section-1 .u-image-6 {
     margin-top: 20px;
-    margin-right: 18px;
   }
 
   .u-section-1 .u-image-7 {
-    margin-right: 18px;
+    margin-top: 20px;
   }
 
   .u-section-1 .u-image-8 {
     margin-top: 20px;
-    margin-right: 18px;
   }
 
   .u-section-1 .u-text-5 {
     width: auto;
-    margin-right: -4px;
-    margin-left: 0;
+    margin-left: -2px;
+    margin-right: -2px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-right: 227px;
+    margin-top: 53px;
   }
 
   .u-section-1 .u-text-6 {
     width: auto;
-    margin-top: 88px;
-    margin-right: 401px;
   }
 
-  .u-section-1 .u-btn-3 {
-    margin-top: 63px;
-    margin-right: 360px;
+  .u-section-1 .u-image-10 {
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-image-11 {
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-text-7 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-8 {
+    width: auto;
+    margin-top: 102px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-right: 360px;
+    margin-top: 63px;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-6 {
     margin-top: -147px;
-    margin-right: 360px;
-    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 6488px;
+    min-height: 5349px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-right: 190px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-text-2 {
-    margin-right: 216px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 405px;
-    margin-right: 0;
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-2 {
     width: 720px;
     height: 405px;
-    margin-right: 0;
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-3 {
     width: 720px;
     height: 404px;
-    margin-right: 0;
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-4 {
     width: 720px;
     height: 406px;
-    margin-right: 0;
+    margin-top: 0;
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: -1px;
-    margin-right: -1px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-right: 0;
+    margin-top: 0;
   }
 
   .u-section-1 .u-text-4 {
+    margin-top: 0;
     margin-right: 216px;
     margin-left: 233px;
   }
@@ -264,65 +285,93 @@
   .u-section-1 .u-image-5 {
     width: 720px;
     height: 404px;
-    margin-right: 0;
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-6 {
     width: 720px;
     height: 404px;
-    margin-right: 0;
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-7 {
     width: 720px;
     height: 404px;
-    margin-right: 0;
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-8 {
     width: 720px;
     height: 404px;
-    margin-right: 0;
+    margin-top: 0;
   }
 
   .u-section-1 .u-text-5 {
-    margin-left: -4px;
+    margin-top: 0;
     margin-right: 0;
+    margin-left: -4px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-right: 7px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-text-6 {
-    margin-right: 307px;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-image-9 {
+    width: 720px;
+    height: 405px;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-image-10 {
+    width: 720px;
+    height: 404px;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-image-11 {
+    height: 405px;
+    width: 720px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 0;
+    margin-left: -158px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-right: 140px;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-top: 0;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-right: 140px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-right: 140px;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4672px;
+    min-height: 4238px;
   }
 
   .u-section-1 .u-text-1 {
     margin-left: 44px;
     margin-right: 44px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-right: 162px;
   }
 
   .u-section-1 .u-image-1 {
@@ -378,30 +427,25 @@
     margin-left: 0;
   }
 
-  .u-section-1 .u-btn-2 {
-    margin-right: 0;
+  .u-section-1 .u-image-9 {
+    width: 540px;
+    height: 304px;
   }
 
-  .u-section-1 .u-text-6 {
-    margin-right: 230px;
+  .u-section-1 .u-image-10 {
+    width: 540px;
+    height: 303px;
   }
 
-  .u-section-1 .u-btn-3 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-right: 0;
+  .u-section-1 .u-image-11 {
+    height: 304px;
+    width: 540px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4103px;
+    min-height: 3001px;
   }
 
   .u-section-1 .u-text-1 {
@@ -442,7 +486,7 @@
   .u-section-1 .u-image-5 {
     height: 191px;
     width: 100%;
-    margin-right: 0;
+    margin-right: auto;
     margin-left: auto;
   }
 
@@ -472,8 +516,23 @@
     margin-right: -1px;
   }
 
-  .u-section-1 .u-text-6 {
-    margin-right: 145px;
+  .u-section-1 .u-image-9 {
+    height: 191px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-10 {
+    height: 191px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-11 {
+    height: 191px;
+    width: 340px;
   }
 } .u-section-2 {
   background-image: none;
@@ -504,7 +563,7 @@
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 501px;
+    min-height: 592px;
   }
 
   .u-section-2 .u-text-1 {
@@ -517,7 +576,7 @@
   }
 
   .u-section-2 .u-btn-2 {
-    margin: 11px auto 49px;
+    margin: 11px auto 60px;
   }
 }
 
