--- a/Windows-Mini-сборки.css
+++ b/Windows-Mini-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 6420px;
+  min-height: 9017px;
 }
 
 .u-section-1 .u-text-1 {
@@ -53,7 +53,7 @@
 }
 
 .u-section-1 .u-text-5 {
-  margin: 161px auto 0;
+  margin: 120px auto 0;
 }
 
 .u-section-1 .u-image-5 {
@@ -86,12 +86,55 @@
 
 .u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 46px auto 0;
+}
+
+.u-section-1 .u-text-7 {
+  margin: 120px auto 0;
+}
+
+.u-section-1 .u-image-9 {
+  width: 900px;
+  height: 506px;
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-image-10 {
+  width: 900px;
+  height: 506px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-11 {
+  width: 900px;
+  height: 506px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-text-8 {
+  margin: 28px auto 0;
+}
+
+.u-section-1 .u-btn-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 46px auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-text-6 {
+    margin-left: 92px;
+    margin-right: 92px;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-left: 27px;
+    margin-right: 27px;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5612px;
+    min-height: 8512px;
   }
 
   .u-section-1 .u-image-1 {
@@ -112,11 +155,11 @@
   .u-section-1 .u-image-4 {
     width: 720px;
     height: 405px;
-    margin-top: 722px;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-top: 20px;
+  .u-section-1 .u-text-5 {
+    margin-left: -340px;
+    margin-right: -340px;
   }
 
   .u-section-1 .u-image-5 {
@@ -137,12 +180,43 @@
   .u-section-1 .u-image-8 {
     width: 680px;
     height: 405px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-left: -340px;
+    margin-right: -340px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-left: -340px;
+    margin-right: -340px;
+  }
+
+  .u-section-1 .u-image-9 {
+    width: 680px;
+    height: 405px;
+  }
+
+  .u-section-1 .u-image-10 {
+    width: 680px;
+    height: 405px;
+  }
+
+  .u-section-1 .u-image-11 {
+    width: 680px;
+    height: 405px;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-top: 0;
+    margin-left: -340px;
+    margin-right: -340px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4804px;
+    min-height: 7128px;
   }
 
   .u-section-1 .u-image-1 {
@@ -163,11 +237,11 @@
   .u-section-1 .u-image-4 {
     width: 540px;
     height: 304px;
-    margin-top: 873px;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-top: -454px;
+  .u-section-1 .u-text-5 {
+    margin-left: -250px;
+    margin-right: -250px;
   }
 
   .u-section-1 .u-image-5 {
@@ -188,12 +262,42 @@
   .u-section-1 .u-image-8 {
     width: 500px;
     height: 304px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-left: -250px;
+    margin-right: -250px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-left: -250px;
+    margin-right: -250px;
+  }
+
+  .u-section-1 .u-image-9 {
+    width: 500px;
+    height: 304px;
+  }
+
+  .u-section-1 .u-image-10 {
+    width: 500px;
+    height: 304px;
+  }
+
+  .u-section-1 .u-image-11 {
+    width: 500px;
+    height: 304px;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-left: -250px;
+    margin-right: -250px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3900px;
+    min-height: 5772px;
   }
 
   .u-section-1 .u-image-1 {
@@ -214,11 +318,11 @@
   .u-section-1 .u-image-4 {
     width: 340px;
     height: 191px;
-    margin-top: 1435px;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-top: -904px;
+  .u-section-1 .u-text-5 {
+    margin-left: -150px;
+    margin-right: -150px;
   }
 
   .u-section-1 .u-image-5 {
@@ -240,8 +344,38 @@
     width: 300px;
     height: 191px;
   }
+
+  .u-section-1 .u-text-6 {
+    margin-left: -150px;
+    margin-right: -150px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-left: -150px;
+    margin-right: -150px;
+  }
+
+  .u-section-1 .u-image-9 {
+    width: 300px;
+    height: 191px;
+  }
+
+  .u-section-1 .u-image-10 {
+    width: 300px;
+    height: 191px;
+  }
+
+  .u-section-1 .u-image-11 {
+    width: 300px;
+    height: 191px;
+  }
+
+  .u-section-1 .u-text-8 {
+    margin-left: -150px;
+    margin-right: -150px;
+  }
 }.u-section-2 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 50vw;
 }
 
 .u-section-2 .u-text-1 {
@@ -253,6 +387,10 @@
 }
 
 .u-section-2 .u-btn-2 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+}
+
+.u-section-2 .u-btn-3 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
 
@@ -273,7 +411,11 @@
   }
 
   .u-section-2 .u-btn-2 {
-    margin: 11px auto 49px;
+    margin: 11px auto 0;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin: 11px auto 60px;
   }
 }
 
@@ -286,5 +428,10 @@
   .u-section-2 .u-btn-2 {
     margin-left: -83px;
     margin-right: -83px;
+  }
+
+  .u-section-2 .u-btn-3 {
+    margin-left: -71px;
+    margin-right: -71px;
   }
 }
