--- a/Новости.css
+++ b/Новости.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2227px;
+  min-height: 3019px;
 }
 
 .u-section-1 .u-text-1 {
@@ -11,11 +11,19 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 9px auto 0;
+  margin: 28px auto 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 0 42px 0 0;
+  margin: 0 21px;
+}
+
+.u-section-1 .u-text-4 {
+  margin: 80px auto 0;
+}
+
+.u-section-1 .u-text-5 {
+  margin: 0 21px;
 }
 
 .u-section-1 .u-image-1 {
@@ -24,24 +32,34 @@
   margin-bottom: 0;
 }
 
-.u-section-1 .u-text-4 {
-  margin: 81px auto 0;
-}
-
-.u-section-1 .u-text-5 {
-  margin: 0 21px;
-}
-
 .u-section-1 .u-text-6 {
-  margin: 62px auto 0;
+  margin: 80px auto 0;
 }
 
 .u-section-1 .u-text-7 {
-  margin: 0 21px 28px;
+  margin: 0 21px;
+}
+
+.u-section-1 .u-text-8 {
+  margin: 80px auto 0;
+}
+
+.u-section-1 .u-text-9 {
+  margin: 0 21px 60px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 3649px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+  }
+
   .u-section-1 .u-text-3 {
+    width: auto;
+    margin-left: 0;
     margin-right: 0;
   }
 
@@ -64,56 +82,70 @@
     margin-left: 0;
     margin-right: 0;
   }
+
+  .u-section-1 .u-text-8 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-9 {
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2731px;
+    min-height: 3424px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-top: 29px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: 157px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-1 {
     height: 413px;
   }
 
-  .u-section-1 .u-text-4 {
-    margin-top: 258px;
-  }
-
-  .u-section-1 .u-text-7 {
+  .u-section-1 .u-text-9 {
     margin-left: 21px;
     margin-right: 21px;
+    margin-bottom: 29px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3271px;
+    min-height: 4024px;
   }
 
-  .u-section-1 .u-image-1 {
-    height: 302px;
+  .u-section-1 .u-text-2 {
+    margin-top: 21px;
   }
 
   .u-section-1 .u-text-4 {
     margin-top: 82px;
   }
 
-  .u-section-1 .u-text-7 {
-    margin-bottom: 60px;
+  .u-section-1 .u-image-1 {
+    height: 302px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 82px;
+  }
+
+  .u-section-1 .u-text-9 {
+    margin-bottom: 31px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 8px;
-  }
-
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 1px;
-  }
-
   .u-section-1 .u-image-1 {
     height: 189px;
   }
