--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -119,13 +119,33 @@
 .u-section-1 .u-btn-16 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px 98px 60px auto;
+  margin: 9px auto 0 96px;
   padding: 10px 127px;
+}
+
+.u-section-1 .u-btn-17 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: -45px 100px 0 auto;
+  padding: 11px 18px 12px 17px;
+}
+
+.u-section-1 .u-btn-18 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: -45px 339px 0 auto;
+  padding: 11px 18px 12px 17px;
+}
+
+.u-section-1 .u-text-2 {
+  margin: 10px 97px 60px 570px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 938px;
+    min-height: 745px;
   }
 
   .u-section-1 .u-text-1 {
@@ -206,16 +226,28 @@
   }
 
   .u-section-1 .u-btn-16 {
-    margin-right: auto;
-    margin-left: 474px;
+    margin-left: -17px;
     padding-right: 134px;
     padding-left: 133px;
+  }
+
+  .u-section-1 .u-btn-17 {
+    margin-right: -16px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    margin-right: 240px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 467px;
+    margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1349px;
+    min-height: 1265px;
   }
 
   .u-section-1 .u-text-1 {
@@ -296,11 +328,28 @@
   .u-section-1 .u-btn-16 {
     margin-left: auto;
   }
+
+  .u-section-1 .u-btn-17 {
+    margin-top: 9px;
+    margin-right: 120px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    margin-right: auto;
+    margin-left: 120px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: 473px;
+    margin-top: 11px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1133px;
+    min-height: 1226px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -344,11 +393,19 @@
   .u-section-1 .u-btn-14 {
     margin-left: 279px;
   }
+
+  .u-section-1 .u-btn-17 {
+    margin-right: 30px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    margin-left: 32px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1226px;
+    min-height: 1366px;
   }
 
   .u-section-1 .u-btn-1 {
@@ -456,6 +513,27 @@
     padding-left: 53px;
     padding-right: 53px;
   }
+
+  .u-section-1 .u-btn-17 {
+    margin-top: 63px;
+    margin-right: auto;
+    padding-right: 63px;
+    padding-left: 62px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    margin-top: -97px;
+    margin-left: auto;
+    padding-right: 65px;
+    padding-left: 63px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 76px;
+    margin-left: 0;
+    margin-right: 0;
+  }
 } .u-section-2 {
   background-image: none;
 }
@@ -501,13 +579,14 @@
 .u-section-2 .u-social-icons-1 {
   height: 51px;
   min-height: 16px;
-  width: 255px;
-  min-width: 115px;
+  width: 323px;
+  min-width: 148px;
   margin: 0 auto;
 }
 
 .u-section-2 .u-icon-1 {
   height: 100%;
+  color: rgb(210, 34, 21) !important;
 }
 
 .u-section-2 .u-icon-2 {
@@ -519,6 +598,10 @@
 }
 
 .u-section-2 .u-icon-4 {
+  height: 100%;
+}
+
+.u-section-2 .u-icon-5 {
   height: 100%;
 }
 
@@ -545,14 +628,14 @@
     padding-right: 31px;
   }
 
-  .u-section-2 .u-icon-2 {
+  .u-section-2 .u-icon-3 {
     color: rgb(210, 34, 21) !important;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 283px;
+    min-height: 305px;
   }
 
   .u-section-2 .u-layout-cell-1 {
@@ -572,10 +655,6 @@
     padding-left: 30px;
     padding-right: 30px;
   }
-
-  .u-section-2 .u-social-icons-1 {
-    width: 257px;
-  }
 }
 
 @media (max-width: 767px) {
@@ -583,9 +662,19 @@
     min-height: 433px;
   }
 
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 259px;
+  }
+
   .u-section-2 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-top: 17px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-2 .u-layout-cell-2 {
@@ -612,11 +701,6 @@
 
   .u-section-2 .u-layout-cell-1 {
     min-height: 246px;
-  }
-
-  .u-section-2 .u-btn-1 {
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .u-section-2 .u-layout-cell-2 {
