--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -14,112 +14,112 @@
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 125px auto 0 334px;
+  margin: 80px auto 0 323px;
   padding: 10px 24px 10px 23px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 98px;
+  margin: -45px auto 0 87px;
   padding: 10px 44px 10px 43px;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 573px;
-  padding: 10px 105px;
+  margin: -45px auto 0 562px;
+  padding: 10px 152px 10px 151px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 98px;
+  margin: 9px auto 0 87px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 334px;
+  margin: -45px auto 0 323px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 573px;
+  margin: -45px auto 0 562px;
   padding: 10px 130px 10px 129px;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 98px;
+  margin: 9px auto 0 87px;
   padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-8 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 334px;
+  margin: -45px auto 0 323px;
   padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-9 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 574px;
+  margin: -45px auto 0 563px;
   padding: 10px 201px;
 }
 
 .u-section-1 .u-btn-10 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 334px;
+  margin: 9px auto 0 323px;
   padding: 10px 20px;
 }
 
 .u-section-1 .u-btn-11 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 98px;
+  margin: -45px auto 0 87px;
   padding: 10px 36px 10px 35px;
 }
 
 .u-section-1 .u-btn-12 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 574px;
+  margin: -45px auto 0 563px;
   padding: 10px 94px 10px 93px;
 }
 
 .u-section-1 .u-btn-13 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 98px;
+  margin: 9px auto 0 87px;
   padding: 10px 50px 10px 49px;
 }
 
 .u-section-1 .u-btn-14 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 334px;
+  margin: -45px auto 0 323px;
   padding: 10px 50px;
 }
 
 .u-section-1 .u-btn-15 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 574px;
+  margin: -45px auto 0 563px;
   padding: 10px 129px;
 }
 
 .u-section-1 .u-btn-16 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 96px;
+  margin: 9px auto 0 85px;
   padding: 10px 127px;
 }
 
@@ -127,7 +127,7 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
-  margin: -45px 100px 0 auto;
+  margin: -45px 111px 0 auto;
   padding: 11px 18px 12px 17px;
 }
 
@@ -135,12 +135,12 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   font-size: 0.875rem;
-  margin: -45px 339px 0 auto;
+  margin: -45px 350px 0 auto;
   padding: 11px 18px 12px 17px;
 }
 
 .u-section-1 .u-text-2 {
-  margin: 10px 97px 60px 570px;
+  margin: 10px 108px 60px 559px;
 }
 
 @media (max-width: 1199px) {
@@ -155,93 +155,96 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 126px;
-    margin-left: 235px;
+    margin-top: 75px;
+    margin-left: 236px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: -14px;
+    margin-left: -13px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: 474px;
-    padding-right: 111px;
-    padding-left: 110px;
+    margin-left: 475px;
+    padding-left: 157px;
+    padding-right: 157px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: -14px;
+    margin-left: -13px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: 235px;
+    margin-left: 236px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-left: 474px;
+    margin-left: 475px;
     padding-left: 135px;
     padding-right: 135px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: -14px;
+    margin-left: -13px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-left: 235px;
+    margin-left: 236px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-left: 475px;
+    margin-left: 476px;
     padding-right: 208px;
     padding-left: 207px;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-left: 236px;
+    margin-left: 237px;
   }
 
   .u-section-1 .u-btn-11 {
-    margin-left: -14px;
+    margin-left: -13px;
   }
 
   .u-section-1 .u-btn-12 {
-    margin-left: 475px;
+    margin-left: 476px;
     padding-left: 100px;
     padding-right: 100px;
   }
 
   .u-section-1 .u-btn-13 {
-    margin-left: -16px;
+    margin-left: -15px;
   }
 
   .u-section-1 .u-btn-14 {
-    margin-left: 236px;
+    margin-left: 237px;
   }
 
   .u-section-1 .u-btn-15 {
-    margin-left: 475px;
+    margin-left: 476px;
     padding-right: 136px;
     padding-left: 135px;
   }
 
   .u-section-1 .u-btn-16 {
-    margin-left: -17px;
+    margin-left: -16px;
     padding-right: 134px;
     padding-left: 133px;
   }
 
   .u-section-1 .u-btn-17 {
-    margin-right: -16px;
+    margin-right: auto;
+    margin-left: 726px;
   }
 
   .u-section-1 .u-btn-18 {
-    margin-right: 240px;
+    margin-right: auto;
+    margin-left: 473px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-left: 467px;
-    margin-right: 0;
+    width: auto;
+    margin-right: 8px;
+    margin-left: 460px;
   }
 }
 
@@ -332,10 +335,10 @@
   .u-section-1 .u-btn-17 {
     margin-top: 9px;
     margin-right: 120px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-18 {
-    margin-right: auto;
     margin-left: 120px;
   }
 
@@ -395,7 +398,7 @@
   }
 
   .u-section-1 .u-btn-17 {
-    margin-right: 30px;
+    margin-right: 29px;
   }
 
   .u-section-1 .u-btn-18 {
@@ -424,8 +427,8 @@
 
   .u-section-1 .u-btn-3 {
     margin-top: 235px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-right: 77px;
+    padding-left: 76px;
   }
 
   .u-section-1 .u-btn-4 {
@@ -515,14 +518,14 @@
   }
 
   .u-section-1 .u-btn-17 {
-    margin-top: 63px;
+    margin-top: 67px;
     margin-right: auto;
     padding-right: 63px;
     padding-left: 62px;
   }
 
   .u-section-1 .u-btn-18 {
-    margin-top: -97px;
+    margin-top: -101px;
     margin-left: auto;
     padding-right: 65px;
     padding-left: 63px;
