--- a/Windows-11-сборки.css
+++ b/Windows-11-сборки.css
@@ -1,10 +1,15 @@
  .u-section-1 {
-  background-image: url("images/img20.jpg");
+  background-image: url("images/img23.jpg");
   background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2554px;
+  min-height: 2604px;
+}
+
+.u-section-1 .u-btn-1 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
 }
 
 .u-section-1 .u-text-1 {
@@ -28,42 +33,44 @@
 }
 
 .u-section-1 .u-image-3 {
-  width: 519px;
+  width: 450px;
   height: 292px;
-  margin: 16px auto 0 45px;
+  object-position: 0% 50%;
+  margin: 16px auto 0 120px;
 }
 
 .u-section-1 .u-image-4 {
-  width: 515px;
+  width: 440px;
   height: 289px;
-  margin: -292px auto 0 580px;
+  object-position: 5.63% 50%;
+  margin: -292px 120px 0 auto;
 }
 
 .u-section-1 .u-text-3 {
   margin: 31px 0 0;
 }
 
-.u-section-1 .u-btn-1 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  background-image: none;
-  margin: 42px auto 0;
-}
-
 .u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 12px auto 0;
-  padding: 10px 41px;
+  margin: 42px auto 0;
 }
 
 .u-section-1 .u-btn-3 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
   margin: 12px auto 0;
-  padding: 10px 50px;
+  padding: 10px 41px;
 }
 
 .u-section-1 .u-btn-4 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 12px auto 0;
+  padding: 10px 50px;
+}
+
+.u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 12px auto 0;
@@ -71,33 +78,28 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: 95px auto 0;
+  margin: 161px auto 0;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-6 {
+.u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 0;
   padding: 10px 30px;
 }
 
-.u-section-1 .u-btn-7 {
-  background-image: none;
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 0;
-  padding: 10px 37px;
-}
-
 .u-section-1 .u-btn-8 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 6px auto 29px;
+  padding: 10px 37px;
 }
 
 @media (max-width: 1199px) {
@@ -113,10 +115,6 @@
     margin-left: auto;
   }
 
-  .u-section-1 .u-image-4 {
-    margin-left: auto;
-  }
-
   .u-section-1 .u-text-3 {
     width: auto;
   }
@@ -125,7 +123,7 @@
     width: auto;
   }
 
-  .u-section-1 .u-btn-7 {
+  .u-section-1 .u-btn-8 {
     margin-bottom: 28px;
   }
 }
@@ -135,43 +133,79 @@
     min-height: 1780px;
   }
 
+  .u-section-1 .u-btn-1 {
+    margin: 0 auto;
+    padding: 10px 90px;
+  }
+
   .u-section-1 .u-text-1 {
     width: auto;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 405px;
+    margin-top: 0;
   }
 
   .u-section-1 .u-image-2 {
     width: 720px;
     height: 405px;
+    margin-top: 0;
   }
 
-  .u-section-1 .u-btn-1 {
-    align-self: center;
+  .u-section-1 .u-image-3 {
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 0;
   }
 
   .u-section-1 .u-btn-2 {
     align-self: center;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-btn-3 {
+    align-self: center;
+    margin-top: 0;
   }
 
   .u-section-1 .u-btn-4 {
-    align-self: center;
+    margin-top: 0;
   }
 
   .u-section-1 .u-btn-5 {
     align-self: center;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 0;
   }
 
   .u-section-1 .u-btn-6 {
     align-self: center;
   }
 
+  .u-section-1 .u-btn-7 {
+    align-self: center;
+    margin-top: 0;
+  }
+
   .u-section-1 .u-btn-8 {
-    margin: 0 auto;
-    padding: 10px 90px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -197,6 +231,10 @@
   .u-section-1 .u-image-2 {
     width: 540px;
     height: 304px;
+  }
+
+  .u-section-1 .u-image-4 {
+    margin-right: 100px;
   }
 }
 
@@ -230,16 +268,15 @@
   }
 
   .u-section-1 .u-image-3 {
-    height: 191px;
+    height: 221px;
     width: 340px;
     margin-right: -2px;
     margin-left: 2px;
   }
 
   .u-section-1 .u-image-4 {
-    height: 191px;
+    height: 223px;
     width: 340px;
-    margin-top: -191px;
     margin-right: -2px;
     margin-left: 2px;
   }
@@ -249,7 +286,7 @@
     margin-left: 2px;
   }
 
-  .u-section-1 .u-btn-1 {
+  .u-section-1 .u-btn-2 {
     margin-right: 0;
     padding: 10px 16px;
   }
@@ -258,15 +295,15 @@
     margin-left: 103px;
   }
 
-  .u-section-1 .u-btn-5 {
-    margin-left: 61px;
-  }
-
   .u-section-1 .u-btn-6 {
     margin-left: 61px;
   }
 
   .u-section-1 .u-btn-7 {
+    margin-left: 61px;
+  }
+
+  .u-section-1 .u-btn-8 {
     margin-left: 61px;
   }
 } .u-section-2 {
