--- a/Новости.css
+++ b/Новости.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 3019px;
+  min-height: 3893px;
 }
 
 .u-section-1 .u-text-1 {
@@ -11,25 +11,19 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 28px auto 0;
+  margin: 9px auto 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 0 21px;
+  margin: 0 42px 0 0;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 80px auto 0;
+  margin: 121px auto 0;
 }
 
 .u-section-1 .u-text-5 {
   margin: 0 21px;
-}
-
-.u-section-1 .u-image-1 {
-  height: 590px;
-  margin-top: 9px;
-  margin-bottom: 0;
 }
 
 .u-section-1 .u-text-6 {
@@ -40,17 +34,31 @@
   margin: 0 21px;
 }
 
+.u-section-1 .u-image-1 {
+  height: 590px;
+  margin-top: 9px;
+  margin-bottom: 0;
+}
+
 .u-section-1 .u-text-8 {
   margin: 80px auto 0;
 }
 
 .u-section-1 .u-text-9 {
+  margin: 0 21px;
+}
+
+.u-section-1 .u-text-10 {
+  margin: 80px auto 0;
+}
+
+.u-section-1 .u-text-11 {
   margin: 0 21px 60px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3649px;
+    min-height: 4219px;
   }
 
   .u-section-1 .u-text-2 {
@@ -59,12 +67,12 @@
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-text-4 {
     width: auto;
+    margin-top: 114px;
   }
 
   .u-section-1 .u-text-5 {
@@ -92,11 +100,53 @@
     margin-left: 0;
     margin-right: 0;
   }
+
+  .u-section-1 .u-text-10 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-11 {
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 33px;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3424px;
+    min-height: 4746px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 30px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: 156px;
+    margin-top: 30px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: 157px;
+    margin-top: 100px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 413px;
+  }
+
+  .u-section-1 .u-text-11 {
+    margin-left: 21px;
+    margin-right: 21px;
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 5337px;
   }
 
   .u-section-1 .u-text-1 {
@@ -104,31 +154,19 @@
   }
 
   .u-section-1 .u-text-2 {
-    width: 157px;
-    margin-top: 0;
+    width: 185px;
+    margin-top: 29px;
   }
 
-  .u-section-1 .u-image-1 {
-    height: 413px;
-  }
-
-  .u-section-1 .u-text-9 {
-    margin-left: 21px;
-    margin-right: 21px;
-    margin-bottom: 29px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 4024px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 21px;
+  .u-section-1 .u-text-3 {
+    margin-top: 9px;
   }
 
   .u-section-1 .u-text-4 {
+    margin-top: -998px;
+  }
+
+  .u-section-1 .u-text-6 {
     margin-top: 82px;
   }
 
@@ -136,17 +174,28 @@
     height: 302px;
   }
 
-  .u-section-1 .u-text-6 {
+  .u-section-1 .u-text-8 {
     margin-top: 82px;
-  }
-
-  .u-section-1 .u-text-9 {
-    margin-bottom: 31px;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-text-2 {
+    margin-top: 785px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: -801px;
+  }
+
   .u-section-1 .u-image-1 {
     height: 189px;
   }
+}.u-section-2 .u-sheet-1 {
+  min-height: 500px;
+}
+
+.u-section-2 .u-text-1 {
+  width: auto;
+  margin: 60px 0;
 }
